@@ -1,5 +1,7 @@
 *SVN*
 
+* datetime_select defaults to Time.zone.now when config.time_zone is set [Geoff Buesing]
+
 * Remove ActionController::Base#view_controller_internals flag. [Pratik]
 
 * Add conditional options to caches_page method. [Paul Horsfall]
